# sayHiPackDemo

./: .coveragerc  README.rst  requirements.txt  setup.cfg  setup.py
demo/src/: say_hi.py
demo/tests/: test_sayhi.py
dluxsay/: say_hi.py
dluxsay/tests/: test_sayhi.py
doc/: Makefile
doc/source/: conf.py  index.rst
