# ini-like file that can mostly replace the setup.py file. It is based on the distutils2 setup.cfg file.

[metadata]
#metadata for upload to PyPI
name = dluxsay
version = 1.0.0
summary = Simple say program - use openstack pdb
description-file = README.rst
author = Luz Cazares
author-email = tmp@dlux.com
home-page = https://github.com/dlux/sayhi_package_demo
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Quality Engineers
    Intended Audience :: Information Technology
    License :: Free For Educational Use :: Apache Software License
    Operating System :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages = find_packages()

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    dluxsay = demo.src.say_hi:main

